--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: 假寐
 
 # Short bio or description (displayed in the header)
 description: Web Developer from Somewhere
@@ -48,7 +48,7 @@ url:
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
 baseurl: "/blog"
-remote_theme: moon
+remote_theme: Moon
 #
 # !! You don't need to change any of the configuration flags below !!
 #
