--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ url:
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
 baseurl: "/blog"
-remote_theme: Moon
+remote_theme: Moon Jekyll Theme
 #
 # !! You don't need to change any of the configuration flags below !!
 #
