--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ url: "https://k-e-m-i.github.io"
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
 baseurl: "/blog"
-theme: jekyll-theme-slate
+theme: jekyll-theme-cayman
 #
 # !! You don't need to change any of the configuration flags below !!
 #
